--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- (c) http://leprosorium.ru/users/nordichesky -->
   <meta charset="utf-8" />
-  <title>Stream</title>
+  <title>Стрим Евромайдана</title>
   <style>
   * {
     box-sizing: border-box;
@@ -45,7 +45,29 @@
 
   .right iframe.twitter-timeline {
     width: 100% !important;
-    height: 100%  !important;
+    height: 90%  !important;
+  }
+
+  .btn {
+    display: block;
+    width: 90%;
+    text-align: center;
+    padding: 1em 0;
+    border: 1px solid rgb(85, 164, 242);
+    border-radius: 10px;
+    background: rgb(85, 164, 242);
+    margin: 1em 1em 2em 1em;
+    text-decoration: none;
+    color: white;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 100;
+    letter-spacing: 1px;
+    transition: color, background .3s;
+  }
+
+  .btn:hover {
+    background: transparent;
+    color: rgb(85, 164, 242);
   }
   </style>
 </head>
@@ -64,6 +86,7 @@
     </div>
 
     <div class="right">
+      <a href="http://helpeuromaidan.info/" class="btn" target="_blank">Помочь</a>
       <a class="twitter-timeline" href="https://twitter.com/search?q=%23euromaidan+%23%D0%B5%D0%B2%D1%80%D0%BE%D0%BC%D0%B0%D0%B9%D0%B4%D0%B0%D0%BD" data-widget-id="426088691581190145">#euromaidan</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
