--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="right">
-      <a href="http://helpeuromaidan.info/" class="btn" target="_blank">Help</a>
+      <a href="http://helpeuromaidan.info/" class="btn" target="_blank">How to help?</a>
       <a class="twitter-timeline" href="https://twitter.com/search?q=%23euromaidan+%23%D0%B5%D0%B2%D1%80%D0%BE%D0%BC%D0%B0%D0%B9%D0%B4%D0%B0%D0%BD" data-widget-id="426088691581190145">#euromaidan</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
