removed gm4in, added absolute path

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="TV and Twitter streams from Euromaidan">
     <meta property="og:url" content="http://onlinemaidan.com/">
-    <meta property="og:image" content="http://gm4.in/i/fkp.png">
+    <meta property="og:image" content="http://onlinemaidan.com/favicon.png">
   </head>
   <body>
     <div class="col-sm-10">
