--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <!-- endbuild -->
 
     <link rel="shortcut icon" href="favicon.png"> 
-    <link rel="apple-itouch-icon" href="apple-touch-icon.png">
+    <link rel="apple-itouch-icon" href="favicon.png">
 
     <meta property="og:title" content="Euromaidan stream">
     <meta property="og:type" content="website">
