--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
           <h2>24 канал</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.youtube.com/embed/75cTwi0IjlM">
+        <a href="" class="col-sm-4 card" data-url="http://www.youtube.com/embed/TN7x3BCIkZU">
           <h2>Радiо Свобода</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
