--- a/app/index.html
+++ b/app/index.html
@@ -28,39 +28,39 @@
   <body>
     <div class="col-sm-10">
       <div class="row cards-list-stacked">
-        <a href="" class="col-sm-4 card" data-url="http://www.youtube.com/embed/jrZcAsPKK74">
+        <a href="" id="channel-1" class="col-sm-4 card" data-url="http://www.youtube.com/embed/jrZcAsPKK74">
           <h2>espresso.tv</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.youtube.com/embed/EH4QfOYZTs4">
+        <a href="" id="channel-2" class="col-sm-4 card" data-url="http://www.youtube.com/embed/EH4QfOYZTs4">
           <h2>Громадьске</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.youtube.com/embed/a3xNQA4U9nU">
+        <a href="" id="channel-3" class="col-sm-4 card" data-url="http://www.youtube.com/embed/a3xNQA4U9nU">
           <h2>5 канал</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.youtube.com/embed/nNHBSGmTGL0">
+        <a href="" id="channel-4" class="col-sm-4 card" data-url="http://www.youtube.com/embed/nNHBSGmTGL0">
           <h2>24 канал</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.youtube.com/embed/TN7x3BCIkZU">
+        <a href="" id="channel-5" class="col-sm-4 card" data-url="http://www.youtube.com/embed/TN7x3BCIkZU">
           <h2>Радiо Свобода</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/16573315?v=3&amp;wmode=direct">
+        <a href="" id="channel-6" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/16573315?v=3&amp;wmode=direct">
           <h2>#EuroMajdan</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/16544269?v=3&amp;wmode=direct">
+        <a href="" id="channel-7" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/16544269?v=3&amp;wmode=direct">
           <h2>Аронець live</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/16807850?v=3&amp;wmode=direct">
+        <a href="" id="channel-8" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/16807850?v=3&amp;wmode=direct">
           <h2>VicheKyiv</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/15360937?v=3&amp;wmode=direct">
+        <a href="" id="channel-9" class="col-sm-4 card" data-url="http://www.ustream.tv/embed/15360937?v=3&amp;wmode=direct">
           <h2>Spilno.TV</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
@@ -76,11 +76,6 @@
       </footer>
     </div>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
