--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
           <h2>espresso.tv</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" id="channel-2" class="col-sm-4 card" data-url="http://www.youtube.com/embed/EH4QfOYZTs4">
+        <a href="" id="channel-2" class="col-sm-4 card" data-url="http://www.youtube.com/embed/XNqNdPBFrCU">
           <h2>Громадьске</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
