--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="col-sm-10">
       <div class="row cards-list-stacked">
-        <a href="" id="channel-1" class="col-sm-4 card" data-url="http://www.youtube.com/embed/jrZcAsPKK74">
+        <a href="" id="channel-1" class="col-sm-4 card" data-url="http://www.youtube.com/embed/pZfR-TBv8V0">
           <h2>espresso.tv</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
