Allow multiple live Youtube streams at the same time

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <!-- endbuild -->
 
-    <link rel="shortcut icon" href="favicon.png"> 
+    <link rel="shortcut icon" href="favicon.png">
     <link rel="apple-itouch-icon" href="favicon.png">
 
     <meta property="og:title" content="Euromaidan stream">
@@ -24,23 +24,23 @@
   <body>
     <div class="col-sm-10">
       <div class="row cards-list-stacked">
-        <a href="" id="channel-1" class="col-sm-4 card" data-url="http://www.youtube.com/embed/pZfR-TBv8V0">
+        <a href="" id="channel-1" class="col-sm-4 card" data-url="http://www.youtube-nocookie.com/embed/pZfR-TBv8V0">
           <h2>espresso.tv</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" id="channel-2" class="col-sm-4 card" data-url="http://www.youtube.com/embed/XNqNdPBFrCU">
+        <a href="" id="channel-2" class="col-sm-4 card" data-url="http://www.youtube-nocookie.com/embed/XNqNdPBFrCU">
           <h2>Громадьске</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" id="channel-3" class="col-sm-4 card" data-url="http://www.youtube.com/embed/a3xNQA4U9nU">
+        <a href="" id="channel-3" class="col-sm-4 card" data-url="http://www.youtube-nocookie.com/embed/a3xNQA4U9nU">
           <h2>5 канал</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" id="channel-4" class="col-sm-4 card" data-url="http://www.youtube.com/embed/nNHBSGmTGL0">
+        <a href="" id="channel-4" class="col-sm-4 card" data-url="http://www.youtube-nocookie.com/embed/nNHBSGmTGL0">
           <h2>24 канал</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
-        <a href="" id="channel-5" class="col-sm-4 card" data-url="http://www.youtube.com/embed/TN7x3BCIkZU">
+        <a href="" id="channel-5" class="col-sm-4 card" data-url="http://www.youtube-nocookie.com/embed/TN7x3BCIkZU">
           <h2>Радiо Свобода</h2>
           <h5>click to watch <i class="fa fa-angle-right"></i></h5>
         </a>
